--- a/ContactDetails/bin/ContactDetails.dll.config
+++ b/ContactDetails/bin/ContactDetails.dll.config
@@ -17,6 +17,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ClientID" value="750383422693-7lnm4tk0eetqe0rmmurvcqav5h4993qk.apps.googleusercontent.com" />
+    <add key ="Clientsecret" value="NpnKPhDjwS9B0HhNbKLOHo71"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
