--- a/ContactDetails/bin/ContactDetails.dll.config
+++ b/ContactDetails/bin/ContactDetails.dll.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ContactDetails-20170809052824.mdf;Initial Catalog=aspnet-ContactDetails-20170809052824;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ContactDetailsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ContactDetailsContext-20170811143130; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ContactDetailsContext-20170811143130.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,7 +20,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ClientID" value="750383422693-7lnm4tk0eetqe0rmmurvcqav5h4993qk.apps.googleusercontent.com" />
-    <add key ="Clientsecret" value="NpnKPhDjwS9B0HhNbKLOHo71"/>
+    <add key="Clientsecret"  value="NpnKPhDjwS9B0HhNbKLOHo71"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
