--- a/ContactDetails/ContactDetails.csproj
+++ b/ContactDetails/ContactDetails.csproj
@@ -193,6 +193,21 @@
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\colReorder.bootstrap.min.css" />
     <Content Include="css\dataTables.bootstrap.min.css" />
+    <Content Include="css\images\ui-bg_glass_20_555555_1x400.png" />
+    <Content Include="css\images\ui-bg_glass_40_0078a3_1x400.png" />
+    <Content Include="css\images\ui-bg_glass_40_ffc73d_1x400.png" />
+    <Content Include="css\images\ui-bg_gloss-wave_25_333333_500x100.png" />
+    <Content Include="css\images\ui-bg_highlight-soft_80_eeeeee_1x100.png" />
+    <Content Include="css\images\ui-bg_inset-soft_25_000000_1x100.png" />
+    <Content Include="css\images\ui-bg_inset-soft_30_f58400_1x100.png" />
+    <Content Include="css\images\ui-icons_222222_256x240.png" />
+    <Content Include="css\images\ui-icons_4b8e0b_256x240.png" />
+    <Content Include="css\images\ui-icons_a83300_256x240.png" />
+    <Content Include="css\images\ui-icons_cccccc_256x240.png" />
+    <Content Include="css\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="css\jquery-ui.min.css" />
+    <Content Include="css\jquery-ui.structure.min.css" />
+    <Content Include="css\jquery-ui.theme.min.css" />
     <Content Include="css\jquery.dataTables.min.css" />
     <Content Include="css\jquery.dataTables_themeroller.css" />
     <Content Include="css\site.css" />
@@ -202,6 +217,7 @@
     <Content Include="js\lib\bootstrap.min.js" />
     <Content Include="js\lib\dataTables.bootstrap.min.js" />
     <Content Include="js\lib\dataTables.colReorder.min.js" />
+    <Content Include="js\lib\jquery-ui.min.js" />
     <Content Include="js\lib\jquery.dataTables.min.js" />
     <Content Include="js\lib\jquery.min.js" />
     <Content Include="Web.config">
