Fix the apharbour

--- a/ContactDetails/ContactDetails.csproj
+++ b/ContactDetails/ContactDetails.csproj
@@ -174,9 +174,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201708140333068_IntialMigrations.cs" />
-    <Compile Include="Migrations\201708140333068_IntialMigrations.Designer.cs">
-      <DependentUpon>201708140333068_IntialMigrations.cs</DependentUpon>
+    <Compile Include="Migrations\201708180326477_InitalCreate.cs" />
+    <Compile Include="Migrations\201708180326477_InitalCreate.Designer.cs">
+      <DependentUpon>201708180326477_InitalCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ApplicationDbConfiguration.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -228,6 +228,7 @@
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -275,8 +276,8 @@
     <Content Include="Views\Contacts\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201708140333068_IntialMigrations.resx">
-      <DependentUpon>201708140333068_IntialMigrations.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201708180326477_InitalCreate.resx">
+      <DependentUpon>201708180326477_InitalCreate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
